added side filter, and style

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 #header {
@@ -38,9 +39,40 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-#aside {
+#side-menu {
   color: yellow;
+  font-size: 3vw;
 }
-#aside #label {
+#side-menu .side-radio-label {
+  display: grid;
+  grid-template-columns: 1em auto;
+  gap: 1.2em;
+  padding: 5px 0;
+  align-items: center;
+}
+#side-menu input[type=radio] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   color: yellow;
+  border: 1px solid yellow;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  display: grid;
+  width: 1.5em;
+  place-content: center;
+  margin: 0;
+}
+#side-menu input[type=radio]::before {
+  content: "";
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 200ms transform ease-in-out;
+  box-shadow: inset 1em 1em red;
+}
+#side-menu input[type=radio]:checked::before {
+  transform: scale(1);
 }/*# sourceMappingURL=style.css.map */
