--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,7 @@ body{
     // width: 40%;
     color: yellow;
     font-size: 3vw;
+    margin-top: 10px;
 
     .side-radio-label{
         display: grid;
