--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,20 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+}
+
 #side-menu {
   color: yellow;
-  font-size: 3vw;
+  font-size: 0.9em;
   margin-top: 10px;
+  text-align: center;
+}
+#side-menu .side-lijst .side-item {
+  display: inline-block;
+  padding: 0 10px;
 }
 #side-menu .side-radio-label {
   display: grid;
@@ -76,4 +86,22 @@ body {
 }
 #side-menu input[type=radio]:checked::before {
   transform: scale(1);
+}
+
+#content {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+  width: 90%;
+  padding: 25px;
+}
+#content .movie-poster {
+  border: 1px solid yellow;
+  max-width: 25%;
+}
+#content .movie-poster:hover {
+  opacity: 0.2;
 }/*# sourceMappingURL=style.css.map */
