--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -36,9 +36,33 @@
     padding: 25px;
     .movie-poster{
         border: 1px solid yellow;
-        // max-width: 25%;
+        
         &:hover{
             opacity: 0.2;
         }
     }
+}
+
+@mixin zoekbalk{
+    width: 53%;
+    background-color: rgba(255, 255, 0, 0.9);
+    height: 1.3rem;
+    // margin-top: 10px;
+    padding: 5px;
+    color: black;
+    border-radius: 25px;
+    border: none;
+    outline: none;
+    transition: border 250ms ;
+    height: 27px;
+
+    &::placeholder{
+        color: black;
+        transform: translateX(10px);
+    }
+
+    &:focus-within{
+        border: 3px solid red;
+    }
+    
 }
