--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,57 @@ body {
 #side-menu input[type=radio]:checked::before {
   transform: scale(1);
 }
+#side-menu input[type=text] {
+  width: 53%;
+  background-color: rgba(255, 255, 0, 0.9);
+  height: 1.3rem;
+  padding: 5px;
+  color: black;
+  border-radius: 25px;
+  border: none;
+  outline: none;
+  transition: border 250ms;
+  height: 27px;
+}
+#side-menu input[type=text]::-moz-placeholder {
+  color: black;
+  transform: translateX(10px);
+}
+#side-menu input[type=text]:-ms-input-placeholder {
+  color: black;
+  transform: translateX(10px);
+}
+#side-menu input[type=text]::placeholder {
+  color: black;
+  transform: translateX(10px);
+}
+#side-menu input[type=text]:focus-within {
+  border: 3px solid red;
+}
+#side-menu .search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+}
+#side-menu #search-btn {
+  background-color: yellow;
+  color: black;
+  border: 1px solid yellow;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 5px;
+  cursor: pointer;
+  transition: 350ms border;
+}
+#side-menu #search-btn:hover {
+  border: 3px solid red;
+}
+#side-menu #search-btn .search-btn-icon {
+  font-size: 2em;
+  padding-top: 3px;
+}
 
 #content {
   text-align: center;
