--- a/css/style.scss
+++ b/css/style.scss
@@ -65,6 +65,36 @@ body{
     input[type="radio"]{
     @include radio-input;
     }
+    input[type="text"]{
+        @include zoekbalk;
+    }
+    .search-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 45px;
+    }
+    #search-btn{
+        background-color: yellow;
+        color: black;
+        border: 1px solid yellow;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-left: 5px;
+        // border: 2px solid red;
+        cursor: pointer;
+        transition: 350ms border;
+        &:hover{
+            border: 3px solid red;
+
+        }
+
+        .search-btn-icon{
+            font-size: 2em;
+            padding-top: 3px;
+        }
+    }
 }
 
 #content{
