--- a/css/style.css
+++ b/css/style.css
@@ -151,4 +151,9 @@ body {
 }
 #content .movie-poster:hover {
   opacity: 0.2;
+}
+
+.error-msg {
+  font-size: 2.5em;
+  color: yellow;
 }/*# sourceMappingURL=style.css.map */
