added callback and promise

--- a/css/filmfinder.css
+++ b/css/filmfinder.css
@@ -156,4 +156,4 @@ body {
 .error-msg {
   font-size: 2.5em;
   color: yellow;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=filmfinder.css.map */
