--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,5 +1,5 @@
 @import './variables';
-
+// project filmfinder
 @mixin radio-input {
     appearance: none;
     color: yellow;
@@ -66,3 +66,5 @@
     }
     
 }
+// end of filmfinder
+
